Overflow bug fixed, footer styled.

--- a/angular-app/src/app/batch/batch.component.scss
+++ b/angular-app/src/app/batch/batch.component.scss
@@ -50,3 +50,6 @@
         }
     }
 }
+.card{
+  overflow: scroll;
+}
